# kokoro-webui

./: .env.example  .gitignore  CONFIGURATION.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  TODO.md  pyproject.toml  pyrightconfig.json
app/: api.py  audio.py  config.py  main.py  openai_compat.py  runtime.py  scheduler.py  schemas.py  status_stream.py
docs/: API.md  TUNING.md
examples/: README.md
scripts/: benchmark_runtime.py  run-server.sh  tune_runtime.py
static/: app.js  index.html  styles.css
static/js/: api-client.js  api-docs.js  dom.js  playback.js  state.js  ui.js
static/styles/: api-docs.css  base.css  components.css  layout.css  responsive.css
tests/: test_api.py  test_frontend.mjs  test_runtime.py  test_scheduler.py
