[project]
name = "kokoro-webui"
version = "0.1.0"
description = "Local WebUI for Kokoro TTS"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.118.0",
    "kokoro-onnx>=0.5.0",
    "sse-starlette>=2.1.3",
    "soundfile>=0.13.1",
    "uvicorn>=0.37.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
server = [
    "uvicorn[standard]>=0.37.0",
]
gpu = [
    "nvidia-ml-py",
    "onnxruntime-gpu>=1.24.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
include = [
    "/static",
    "/models/.gitkeep",
    "/README.md",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
    "httpx>=0.28.1",
    "ruff>=0.15.5",
]
